tests/assignment/prefix_operator.lox
var a = "a";
!a = "value";  // error
